# vb-kb

./: .gitignore  .pre-commit-config.yaml  CLOUDFLARE_ACCESS.md  DEPLOYMENT.md  KB_V2_ARCHITECTURE_DECISIONS.md  KB_V2_IMPLEMENTATION_PLAN.md  KB_V2_PHASE0_FREEZE.md  README.md  agents.md  insurance_primary_icp_nyc_second_degree_progress.json  insurance_primary_icp_nyc_second_degree_progress_v2.json  insurance_primary_icp_nyc_second_degree_results.csv  insurance_primary_icp_nyc_second_degree_results_v2.csv  insurance_primary_icp_theme.txt  justfile  linkedin_people_search_plan.csv  me.md  mkdocs.yml  mkdocs_hooks.py  pyproject.toml  waterloo_first_degree_results.csv
adr/: 0001-split-data-repo-mode.md
data/: migration-path-map.csv
data-new/: migration-path-map.csv
deploy/: .env.example  docker-compose.traefik.yml
functions/: authorize.ts  callback.ts  mcp.ts  register.ts  token.ts
kb/: __init__.py  cli.py  edges.py  enrichment_adapters.py  enrichment_bootstrap.py  enrichment_config.py  enrichment_linkedin_adapter.py  enrichment_playwright_bootstrap.py  enrichment_playwright_fetch.py  enrichment_playwright_timing.py  enrichment_run.py  enrichment_runtime_logging.py  enrichment_sessions.py  enrichment_skool_adapter.py  generate_legacy_data.py  linkedin_auth.py  linkedin_daemon.py  linkedin_daemon_client.py  linkedin_people_search.py  mcp_server.py  migrate_notes_v2.py  migrate_v2.py  schemas.py  semantic.py  validate.py
openapi/: custom-gpt-action.yaml
scripts/: linkedin_auth_with_totp.py  linkedin_collect_insurance_primary_icp_nyc.py  linkedin_daemon_client.py  (+5 more)
(+1358 files in other folders)
