[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vb-kb-tools"
version = "0.1.0"
description = "Validation tools for the VB knowledge base."
requires-python = ">=3.11"
dependencies = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.0",
  "pydantic>=2.11.0",
  "PyYAML>=6.0",
]

[project.scripts]
kb = "kb.cli:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["kb"]
